# lib-gatilegrid

./: .gitignore  .isort.cfg  .pylintrc  .travis.yml  MANIFEST.in  Makefile  Pipfile  README.md  buildspec.yml  pyproject.toml  setup.py  tox.ini
.github/workflows/: pr-auto-semver.yml  semver.yml
gatilegrid/: __init__.py  grid.py  tilegrids.py
tests/: test_gatilegrid.py  test_geodetictilegrid.py  test_grid.py  test_tilegrids.py  test_webmercatortilegrid.py  unittest.cfg
