[build-system]
requires = ["setuptools>=77.0.0", "build", "setuptools-git-versioning<2"]
build-backend = "setuptools.build_meta"

[project]
name = "gatilegrid"
requires-python = ">=3.0"
description = "Popular tile grids and grids API for web mapping applications"
readme = "README.md"
license = "MIT"
authors = [
    {name = "Loic Gasser", email = "loicgasser4@gmail.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: GIS",
    "Topic :: Software Development :: Libraries :: Python Modules"
]
keywords = ["gis", "wmts", "grid", "map"]
dynamic = ["version"]

[project.urls]
Homepage = "https://github.com/geoadmin/lib-gatilegrid"
Documentation = "https://github.com/geoadmin/lib-gatilegrid#readme"
Source = "https://github.com/geoadmin/lib-gatilegrid"
Tracker = "https://github.com/geoadmin/lib-gatilegrid/issues"

[tool.setuptools.packages.find]
include = ["gatilegrid*"]

[tool.setuptools-git-versioning]
enabled = true
dev_template = "{tag}+git.{sha}"
dirty_template = "{tag}+git.{sha}.dirty"
